# docs/swagger.json
@@ -97,7 +97,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/internal_handlers.GovernmentFundingCreateRequest"
+                            "$ref": "#/definitions/github_com_eenemeene_kitamanager-go_internal_models.GovernmentFundingCreateRequest"
                         }
                     }
                 ],
@@ -226,7 +226,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/internal_handlers.GovernmentFundingUpdateRequest"
+                            "$ref": "#/definitions/github_com_eenemeene_kitamanager-go_internal_models.GovernmentFundingUpdateRequest"
                         }
                     }
                 ],
@@ -3702,7 +3702,7 @@
                 }
             }
         },
-        "/api/v1/users/{uid}": {
+        "/api/v1/users/{userId}": {
             "get": {
                 "security": [
                     {
@@ -3724,7 +3724,7 @@
                     {
                         "type": "integer",
                         "description": "User ID",
-                        "name": "uid",
+                        "name": "userId",
                         "in": "path",
                         "required": true
                     }
@@ -3777,7 +3777,7 @@
                     {
                         "type": "integer",
                         "description": "User ID",
-                        "name": "uid",
+                        "name": "userId",
                         "in": "path",
                         "required": true
                     },
@@ -3845,7 +3845,7 @@
                     {
                         "type": "integer",
                         "description": "User ID",
-                        "name": "uid",
+                        "name": "userId",
                         "in": "path",
                         "required": true
                     }
@@ -3875,7 +3875,7 @@
                 }
             }
         },
-        "/api/v1/users/{uid}/groups": {
+        "/api/v1/users/{userId}/groups": {
             "post": {
                 "security": [
                     {
@@ -3897,7 +3897,7 @@
                     {
                         "type": "integer",
                         "description": "User ID",
-                        "name": "uid",
+                        "name": "userId",
                         "in": "path",
                         "required": true
                     },
@@ -3951,7 +3951,7 @@
                 }
             }
         },
-        "/api/v1/users/{uid}/groups/{gid}": {
+        "/api/v1/users/{userId}/groups/{groupId}": {
             "put": {
                 "security": [
                     {
@@ -3973,14 +3973,14 @@
                     {
                         "type": "integer",
                         "description": "User ID",
-                        "name": "uid",
+                        "name": "userId",
                         "in": "path",
                         "required": true
                     },
                     {
                         "type": "integer",
                         "description": "Group ID",
-                        "name": "gid",
+                        "name": "groupId",
                         "in": "path",
                         "required": true
                     },
@@ -4054,14 +4054,14 @@
                     {
                         "type": "integer",
                         "description": "User ID",
-                        "name": "uid",
+                        "name": "userId",
                         "in": "path",
                         "required": true
                     },
                     {
                         "type": "integer",
                         "description": "Group ID",
-                        "name": "gid",
+                        "name": "groupId",
                         "in": "path",
                         "required": true
                     }
@@ -4097,7 +4097,7 @@
                 }
             }
         },
-        "/api/v1/users/{uid}/memberships": {
+        "/api/v1/users/{userId}/memberships": {
             "get": {
                 "security": [
                     {
@@ -4119,7 +4119,7 @@
                     {
                         "type": "integer",
                         "description": "User ID",
-                        "name": "uid",
+                        "name": "userId",
                         "in": "path",
                         "required": true
                     }
@@ -4158,7 +4158,7 @@
                 }
             }
         },
-        "/api/v1/users/{uid}/organizations": {
+        "/api/v1/users/{userId}/organizations": {
             "post": {
                 "security": [
                     {
@@ -4180,7 +4180,7 @@
                     {
                         "type": "integer",
                         "description": "User ID",
-                        "name": "uid",
+                        "name": "userId",
                         "in": "path",
                         "required": true
                     },
@@ -4228,7 +4228,7 @@
                 }
             }
         },
-        "/api/v1/users/{uid}/organizations/{oid}": {
+        "/api/v1/users/{userId}/organizations/{orgId}": {
             "delete": {
                 "security": [
                     {
@@ -4250,14 +4250,14 @@
                     {
                         "type": "integer",
                         "description": "User ID",
-                        "name": "uid",
+                        "name": "userId",
                         "in": "path",
                         "required": true
                     },
                     {
                         "type": "integer",
                         "description": "Organization ID",
-                        "name": "oid",
+                        "name": "orgId",
                         "in": "path",
                         "required": true
                     }
@@ -4293,7 +4293,7 @@
                 }
             }
         },
-        "/api/v1/users/{uid}/superadmin": {
+        "/api/v1/users/{userId}/superadmin": {
             "put": {
                 "security": [
                     {
@@ -4315,7 +4315,7 @@
                     {
                         "type": "integer",
                         "description": "User ID",
-                        "name": "uid",
+                        "name": "userId",
                         "in": "path",
                         "required": true
                     },
@@ -5055,6 +5055,24 @@
                 }
             }
         },
+        "github_com_eenemeene_kitamanager-go_internal_models.GovernmentFundingCreateRequest": {
+            "type": "object",
+            "required": [
+                "name",
+                "state"
+            ],
+            "properties": {
+                "name": {
+                    "type": "string",
+                    "maxLength": 255,
+                    "example": "Berlin Kita Funding"
+                },
+                "state": {
+                    "type": "string",
+                    "example": "berlin"
+                }
+            }
+        },
         "github_com_eenemeene_kitamanager-go_internal_models.GovernmentFundingPeriod": {
             "type": "object",
             "properties": {
@@ -5240,6 +5258,16 @@
                     "type": "number",
                     "minimum": 0,
                     "example": 0.261
+                }
+            }
+        },
+        "github_com_eenemeene_kitamanager-go_internal_models.GovernmentFundingUpdateRequest": {
+            "type": "object",
+            "properties": {
+                "name": {
+                    "type": "string",
+                    "maxLength": 255,
+                    "example": "Berlin Updated"
                 }
             }
         },
@@ -5904,34 +5932,6 @@
                 "message": {
                     "type": "string",
                     "example": "resource not found"
-                }
-            }
-        },
-        "internal_handlers.GovernmentFundingCreateRequest": {
-            "type": "object",
-            "required": [
-                "name",
-                "state"
-            ],
-            "properties": {
-                "name": {
-                    "type": "string",
-                    "maxLength": 255,
-                    "example": "Berlin Kita Funding"
-                },
-                "state": {
-                    "type": "string",
-                    "example": "berlin"
-                }
-            }
-        },
-        "internal_handlers.GovernmentFundingUpdateRequest": {
-            "type": "object",
-            "properties": {
-                "name": {
-                    "type": "string",
-                    "maxLength": 255,
-                    "example": "Berlin Updated"
                 }
             }
         },
